// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordWithmeter component renders with no props 1`] = `
<div>
  <div
    className="password-input"
  >
    <ChoiceComponent
      checked={false}
      className="password-input--show-password ds-u-float--right"
      disabled={false}
      label="Show password"
      name="show-password"
      onChange={[Function]}
      size="small"
      type="checkbox"
      value="on"
    />
    <TextField
      ariaLabel="password"
      className="no-clearfix"
      disabled={false}
      errorMessage=""
      hint={false}
      id="password"
      label="Password"
      name="password"
      onChange={[Function]}
      type="password"
      value=""
    />
  </div>
</div>
`;

exports[`PasswordWithmeter component renders with various passwords 1`] = `
<div>
  <div
    className="password-input"
  >
    <ChoiceComponent
      checked={false}
      className="password-input--show-password ds-u-float--right"
      disabled={false}
      label="Show password"
      name="show-password"
      onChange={[Function]}
      size="small"
      type="checkbox"
      value="on"
    />
    <TextField
      ariaLabel="password"
      className="no-clearfix"
      disabled={false}
      errorMessage=""
      hint="A strong password is at least 9 characters, not a commonly-used word or phrase, and not too similar to the person’s name or email address."
      id="password"
      label="Password"
      name="password"
      onChange={[Function]}
      type="password"
      value="a"
    />
    <div
      className="strength-meter"
    >
      <div
        className="strength-meter-fill"
        data-strength={0}
      />
    </div>
    <p
      aria-live="polite"
      className="strength-meter-quality"
      role="alert"
    >
      Password strength: Weak
    </p>
  </div>
</div>
`;

exports[`PasswordWithmeter component renders with various passwords 2`] = `
<div>
  <div
    className="password-input"
  >
    <ChoiceComponent
      checked={false}
      className="password-input--show-password ds-u-float--right"
      disabled={false}
      label="Show password"
      name="show-password"
      onChange={[Function]}
      size="small"
      type="checkbox"
      value="on"
    />
    <TextField
      ariaLabel="password"
      className="no-clearfix"
      disabled={false}
      errorMessage=""
      hint="A strong password is at least 9 characters, not a commonly-used word or phrase, and not too similar to the person’s name or email address."
      id="password"
      label="Password"
      name="password"
      onChange={[Function]}
      type="password"
      value="abCD"
    />
    <div
      className="strength-meter"
    >
      <div
        className="strength-meter-fill"
        data-strength={0}
      />
    </div>
    <p
      aria-live="polite"
      className="strength-meter-quality"
      role="alert"
    >
      Password strength: Weak
    </p>
  </div>
</div>
`;

exports[`PasswordWithmeter component renders with various passwords 3`] = `
<div>
  <div
    className="password-input"
  >
    <ChoiceComponent
      checked={false}
      className="password-input--show-password ds-u-float--right"
      disabled={false}
      label="Show password"
      name="show-password"
      onChange={[Function]}
      size="small"
      type="checkbox"
      value="on"
    />
    <TextField
      ariaLabel="password"
      className="no-clearfix"
      disabled={false}
      errorMessage=""
      hint="A strong password is at least 9 characters, not a commonly-used word or phrase, and not too similar to the person’s name or email address."
      id="password"
      label="Password"
      name="password"
      onChange={[Function]}
      type="password"
      value="abCD321"
    />
    <div
      className="strength-meter"
    >
      <div
        className="strength-meter-fill"
        data-strength={0}
      />
    </div>
    <p
      aria-live="polite"
      className="strength-meter-quality"
      role="alert"
    >
      Password strength: Weak
    </p>
  </div>
</div>
`;

exports[`PasswordWithmeter component renders with various passwords 4`] = `
<div>
  <div
    className="password-input"
  >
    <ChoiceComponent
      checked={false}
      className="password-input--show-password ds-u-float--right"
      disabled={false}
      label="Show password"
      name="show-password"
      onChange={[Function]}
      size="small"
      type="checkbox"
      value="on"
    />
    <TextField
      ariaLabel="password"
      className="no-clearfix"
      disabled={false}
      errorMessage=""
      hint="A strong password is at least 9 characters, not a commonly-used word or phrase, and not too similar to the person’s name or email address."
      id="password"
      label="Password"
      name="password"
      onChange={[Function]}
      type="password"
      value="abCD321!,"
    />
    <div
      className="strength-meter"
    >
      <div
        className="strength-meter-fill"
        data-strength={0}
      />
    </div>
    <p
      aria-live="polite"
      className="strength-meter-quality"
      role="alert"
    >
      Password strength: Weak
    </p>
  </div>
</div>
`;

exports[`PasswordWithmeter component renders with various passwords 5`] = `
<div>
  <div
    className="password-input"
  >
    <ChoiceComponent
      checked={false}
      className="password-input--show-password ds-u-float--right"
      disabled={false}
      label="Show password"
      name="show-password"
      onChange={[Function]}
      size="small"
      type="checkbox"
      value="on"
    />
    <TextField
      ariaLabel="password"
      className="no-clearfix"
      disabled={false}
      errorMessage=""
      hint="A strong password is at least 9 characters, not a commonly-used word or phrase, and not too similar to the person’s name or email address."
      id="password"
      label="Password"
      name="password"
      onChange={[Function]}
      type="password"
      value="abCD321!,@_"
    />
    <div
      className="strength-meter"
    >
      <div
        className="strength-meter-fill"
        data-strength={0}
      />
    </div>
    <p
      aria-live="polite"
      className="strength-meter-quality"
      role="alert"
    >
      Password strength: Weak
    </p>
  </div>
</div>
`;

exports[`PasswordWithmeter component shows the password 1`] = `
<div>
  <div
    className="password-input"
  >
    <ChoiceComponent
      checked={true}
      className="password-input--show-password ds-u-float--right"
      disabled={false}
      label="Show password"
      name="show-password"
      onChange={[Function]}
      size="small"
      type="checkbox"
      value="on"
    />
    <TextField
      ariaLabel="password"
      className="no-clearfix"
      disabled={false}
      errorMessage=""
      hint={false}
      id="password"
      label="Password"
      name="password"
      onChange={[Function]}
      type="text"
      value="abcd1234"
    />
  </div>
</div>
`;
